--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -41,7 +41,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -89,7 +89,7 @@
             </li>
           <% } else { %>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="/login">
                 Login
               </a>
             </li>
