--- a/views/instructor/watchList.ejs
+++ b/views/instructor/watchList.ejs
@@ -66,7 +66,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/user/watchlist">
+							<a class="nav-link" href="/student/watchlist">
 								<i class="fa fa-heart" aria-hidden="true"></i>
 							</a>
 						</li>
