--- a/views/user/course.ejs
+++ b/views/user/course.ejs
@@ -70,7 +70,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/user/watchlist">
+              <a class="nav-link" href="/student/watchlist">
                 <i class="fa fa-heart" aria-hidden="true"></i>
               </a>
             </li>
@@ -344,16 +344,25 @@
           </div>
         </div>
         <div>
-          <% if(!isOwn) { %>
+          <% if(isLog) { %>
+            <% if(!isOwn) { %>
+              <div class="course-price">
+                <%= payload.price %> <%= payload.concurrency %>
+              </div>
+              <div class="course-controls">
+                <button id="btnAdd" data-course-id="<%= payload.id %>" class="btn btn-danger btn-block">Add To Cart</button>
+                <a data-toggle="modal" data-target="#buyCourse" class="btn btn-outline-primary btn-block">Buy</a>
+                <div>
+                  30-Day Money-Back Guarantee
+                </div>
+              </div>
+            <% } %>
+          <% } else { %>
             <div class="course-price">
               <%= payload.price %> <%= payload.concurrency %>
             </div>
             <div class="course-controls">
-              <button id="btnAdd" data-course-id="<%= payload.id %>" class="btn btn-danger btn-block">Add To Cart</button>
-              <a data-toggle="modal" data-target="#buyCourse" class="btn btn-outline-primary btn-block">Buy</a>
-              <div>
-                30-Day Money-Back Guarantee
-              </div>
+              <a href="/login" class="btn btn-block btn-outline-danger">Login to buy</a>
             </div>
           <% } %>
           <div class="course-include">
