--- a/views/user/watch.ejs
+++ b/views/user/watch.ejs
@@ -14,6 +14,7 @@
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="/css/index.css" />
+  <link rel="stylesheet" href="/css/watchlist.css">
   <title>
     Online Courses - Learn Anything On Your Schedule | MNP Courses
   </title>
