add admin screen

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -377,10 +377,9 @@
                   icon: 'error',
                   title: data.msg
                 })
+              } else {
+                location.href = "/login"
               }
-              // } else {
-              //   location.href = "/login"
-              // }
             }
           )
         })
