--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -13,157 +13,134 @@
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous"
   />
-  <link rel="stylesheet" href="/css/index.css" />
   <title>
     Online Courses - Learn Anything On Your Schedule | MNP Courses
   </title>
   <link rel="shortcut icon" href="/assets/images/logo-images.svg" />
+  <link rel="stylesheet" href="/css/admin.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="container">
-      <a href="#" class="navbar-branch">
-        <img src="/assets/images/logo.svg" width="160px" />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarResponsive"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <form id="formSearch" method="GET" action="/search" class="ml-1">
-          <span><i class="fas fa-search"></i></span>
-          <input type="text" placeholder="Search..." class="rounded-pill" />
-        </form>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="dropdownCategory"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >Categories</a
-            >
-            <div class="dropdown-menu" aria-labelledby="dropdownCategory">
-              <% for(const category of categories) { %>
-                <a class="dropdown-item" href="/category-courses/<%= category.id %>?page=1"><%= category.category_name %></a>
-              <%} %>
+
+  <div class="main-container">
+    <div class="side-bar">
+      <div class="side-bar-logo container-fluid">
+        Admin
+      </div>
+      <div class="main-side-bar mt-3">
+        <div class="ml-2">
+          Dashboard
+        </div>
+        <ul class="list-group">
+          <li  data-transform="tableTransform" data-target="#studentTable" class="list-group-item active d-flex">
+            <div class="icon">
+              <i class="far fa-user"></i>
+            </div>
+            <div>
+              List Students
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
+          <li data-transform="tableTransform" data-target="#instructorTable" class="list-group-item d-flex">
+            <div class="icon">
+              <i class="fas fa-chalkboard-teacher"></i>
+            </div>
+            <div>
+              List Instructors
+            </div>
           </li>
-          <% if(typeof user !== 'undefined' ) { %>
-            <li class="nav-item">
-              <a class="nav-link" href="/student/cart">
-                <i class="fas fa-shopping-cart"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/user/watchlist">
-                <i class="fa fa-heart" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="dropdownUser"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-                ><%= user.username %></a
-              >
-              <div class="dropdown-menu" aria-labelledby="dropdownUser">
-                <a class="dropdown-item" href="/profile">My Profile</a>
-                <a class="dropdown-item" href="/logout">Log out</a>
-              </div>
-            </li>
-          <% } else { %>
-            <li class="nav-item">
-              <a class="nav-link" href="/login">
-                Login
-              </a>
-            </li>
-          <% } %>
+          <li  data-transform="tableTransform"  data-target="#courseTable" class="list-group-item d-flex">
+            <div class="icon">
+              <i class="fas fa-book"></i>
+            </div>
+            <div>
+              List Courses
+            </div>
+          </li>
         </ul>
+        <div class="mt-5 text-center home">
+          <a href="/">Back to home</a>
+        </div>
+
       </div>
     </div>
-  </nav>
-  
-  <!-- Main content -->
-  <div class="container">
-    <div>Profile</div>
-    <div class="row">
-      
-    </div>
-  </div>
-  <hr>
-  <!-- Before footer -->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-6 footer-text">Top companies choose <a href="#">MNP Courses</a> to build in-demand career skills.</div>
-      <ul class="col-6 d-flex justify-content-between mb-0 logo">
-        <li><img src="https://s.udemycdn.com/partner-logos/lyft-logo.svg" alt=""></li>
-        <li><img src="https://s.udemycdn.com/partner-logos/adidas-logo.svg" alt=""></li>
-        <li><img src="https://s.udemycdn.com/partner-logos/eventbrite-logo.svg" alt=""></li>
-        <li><img src="https://s.udemycdn.com/partner-logos/surveymonkey-logo.svg" alt=""></li>
-        <li><img src="https://s.udemycdn.com/partner-logos/booking-logo.svg" alt=""></li>
-      </ul>
-    </div>  
-  </div>
-  <hr>
-  <div class="container-fluid footer">
-    <div class="row">
-      <ul class="col list-group">
-        <li class="list-group"><a href="#">
-          MNP for Business</a></li>
-        <li class="list-group"><a href="#">
-          Teach on Udemy</a></li>
-        <li class="list-group"><a href="#">
-          About us</a></li>
-        <li class="list-group"><a href="#">
-          Contact us</a></li>
-      </ul>
-      <ul class="col list-group">
-        <li class="list-group"><a href="#">
-          Careers</a></li>
-        <li class="list-group"><a href="#">
-          Blog</a></li>
-        <li class="list-group"><a href="#">
-          Help and Support</a></li>
-        <li class="list-group"><a href="#">
-          Affiliate</a></li>
-      </ul>
-      <ul class="col list-group">
-        <li class="list-group"><a href="#">
-          Terms</a></li>
-        <li class="list-group"><a href="#">           
-          Privacy policy and cookie policy</a></li>
-        <li class="list-group"><a href="#">
-          Sitemap</a></li>
-        <li class="list-group"><a href="#">
-          Featured courses</a></li>
-      </ul>
-    </div>
-    <div class="row footer-logo d-flex justify-content-between">
-      <div>
-        <img src="/assets/images/logo-images.svg" width="50px">
-      </div>
-      <div class="mt-3">
-        Copyright @ 2020 MNP, Inc
+    <div class="main-content">
+      <div id="studentTable" class="container item-table">
+        <div class="admin-title">
+          List Students
+        </div>
+
+        <div class="d-flex justify-content-between">
+          <div>
+          </div>
+          <div class="count">
+            Total: <%= students.length %>
+          </div>
+        </div>
+        <div class="table-views">
+          <table>
+            <tr>
+              <th>ID</th>
+              <th>Username</th>
+              <th>Email</th>
+              <th>First name</th>
+              <th>Last name</th>
+              <th>Action</th>
+            </tr>
+            <% students.forEach(item => { %>
+              <tr>
+                <td><%= item.id %></td>
+                <td><%= item.user_name %></td>
+                <td><%= item.email %></td>
+                <td><%= item.first_name %></td>
+                <td><%= item.last_name %></td>
+                <td>
+                  <button class="btn btn-danger">Disable</button>
+                </td>
+              </tr>
+            <% }) %>
+          </table>
+        </div>
       </div>
 
+      <div id="instructorTable" class="container item-table">
+        <div class="admin-title">
+          List Instructor
+        </div>
+
+        <div class="d-flex justify-content-between">
+          <div>
+          </div>
+          <div class="count">
+            Total: <%= students.length %>
+          </div>
+        </div>
+        <div class="table-views">
+          <table>
+            <tr>
+              <th>ID</th>
+              <th>Username</th>
+              <th>Email</th>
+              <th>First name</th>
+              <th>Last name</th>
+              <th>Action</th>
+            </tr>
+            <% students.forEach(item => { %>
+              <tr>
+                <td><%= item.id %></td>
+                <td><%= item.user_name %></td>
+                <td><%= item.email %></td>
+                <td><%= item.first_name %></td>
+                <td><%= item.last_name %></td>
+                <td>
+                  <button class="btn btn-danger">Disable</button>
+                </td>
+              </tr>
+            <% }) %>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
+  
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -173,5 +150,27 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <script>
+    $(document).ready(function(){
+      let dataList = $('[data-transform="tableTransform"]').map(function(){
+        return $(this).data('target')
+      }).get()
+
+      $('[data-transform="tableTransform"]').click(function(){
+        let target = $(this).data("target")
+        dataList.forEach(async item => {
+          if(item === target){
+            $(item).show()
+            await $('[data-transform="tableTransform"]').removeClass("active")
+            $(`[data-target="${item}"]`).addClass("active")
+          }
+          else {
+            $(item).hide()
+          }
+        })
+      })
+    })
+  </script>
 </body>
 </html>
